--- a/snippets/product-card-02.liquid
+++ b/snippets/product-card-02.liquid
@@ -16,44 +16,69 @@
   }
 
   /* Equal Height Product Cards */
-  .product-item {
+  .productGrid .product,
+  .productList .product {
     display: flex;
     flex-direction: column;
     height: 100%;
   }
 
-  .product-item .card {
+  .productGrid .product .product-item,
+  .productList .product .product-item {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    flex-grow: 1;
+  }
+
+  .productGrid .product .product-item .card,
+  .productList .product .product-item .card {
     display: flex;
     flex-direction: column;
     height: 100%;
   }
 
-  .product-item .card-product {
+  .productGrid .product .product-item .card-product,
+  .productList .product .product-item .card-product {
     display: flex;
     flex-direction: column;
     height: 100%;
   }
 
-  .product-item .card-information {
+  .productGrid .product .product-item .card-information,
+  .productList .product .product-item .card-information {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    justify-content: space-between;
   }
 
-  .product-item .card-information__wrapper {
+  .productGrid .product .product-item .card-information__wrapper,
+  .productList .product .product-item .card-information__wrapper {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
   }
 
-  .product-item .card-price {
+  .productGrid .product .product-item .card-price,
+  .productList .product .product-item .card-price {
     margin-top: auto;
   }
 
   /* 確保床褥標籤在底部 */
-  .product-item .mattress-tags {
+  .productGrid .product .product-item .mattress-tags,
+  .productList .product .product-item .mattress-tags {
     margin-top: auto;
+  }
+
+  /* 確保產品網格行有相同高度 */
+  .productGrid {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+  }
+
+  .productGrid .product {
+    display: flex;
   }
 </style>
 
